--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <span class="span_section">walk with luxury</span></h1>
             <button class="button " onclick="display('section_home')">Shop now</button>
         </div>
-        <video src="/3627-172488393_medium.mp4"  id="background-video" autoplay muted loop></video>
+        <video src="3627-172488393_medium.mp4"  id="background-video" autoplay muted loop></video>
     </div>
 </div>
 
